Changed the db to sqlite.

--- a/app/views/statics/cabinets.html.erb
+++ b/app/views/statics/cabinets.html.erb
@@ -51,6 +51,9 @@
 
         <tr class="name">
           <td>Pepper Shaker</td>
+          <td>KExpresso</td>
+          <td>Brownstone</td>
+          <td>Pearl</td>
         </tr>   
       </table>      
     </div>
